2004-09-09 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/device.c : When no max ram set validate full memory range.
	* src/pic/pcode.c,
	* src/pic/pcodepeep.c : Copy C code comments to optimised replacement code.

2004-09-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_gptrget.c,
	* device/lib/_gptrput.c: updated comment
	* device/lib/calloc.c,
	* device/lib/free.c,
	* device/lib/malloc.c,
	* device/lib/realloc.c: added LGPL, made them reentrant-safe
	* src/SDCCcse.c (cseBBlock),
	* src/SDCCicode.c (printOperand, geniCodeArray),
	* src/SDCCicode.h (struct operand): fixed bug 868103
	* support/regression/tests/bug-868103.c: added
	* src/SDCCast.c (searchLitOp),
	* src/SDCCcse.h (struct cseDef),
	* src/SDCCglue.c (printIvalArray, spacesToUnderscores),
	* src/SDCCicode.h (struct operand),
	* src/SDCCsymt.h (struct sym_link),
	* src/avr/gen.c (hasInc),
	* src/ds390/gen.c (hasInc),
	* src/hc08/gen.c (genPlusIncr, hasInc),
	* src/mcs51/gen.c (hasInc),
	* src/pic16/glue.c (pic16_printIvalChar),
	* src/pic16/ralloc.c (regWithIdx),
	* src/xa51/gen.c (hasInc) : removed warnings
	* src/SDCCast.c (createBlock): added comment ???
	* src/hc08/ralloc.c: updated comments

2004-09-07 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* doc/sdccman.lyx: updated section on switch statements, added
	section about semaphore locking
	* doc/Makefile: added option -info for latex2html
	* device/lib/_gptrget.c,
	* device/lib/_gptrput.c: __XPAGE instead of P2 in outcommented code

2004-09-06 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/device.h,
	* src/pic/device.c,
	* src/pic/port.c : Changed PIC14 code to not set bit RP1 when
	 maxram is less than 0x100.

2004-09-06 Slade Rich <slade_rich AT users.sourceforge.net>

	* Bug fixes for PIC14 - signed RSHIFT problem. Patch supplied by Allen(agschrum).

2004-09-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/port.h,
	* src/mcs51/main.c,
	* src/ds390/main.c,
	* src/z80/main.c,