@@ -193,6 +193,7 @@ SDCCERR - SDCC Standard error handler
 #define W_DEPRECATED_PRAGMA           175 /* deprecated pragma */
 #define E_SIZEOF_INCOMPLETE_TYPE      176 /* sizeof applied to an incomplete type */
 #define E_PREVIOUS_DEF                177 /* previously defined here */
+#define W_SIZEOF_VOID                 178 /* size of void is zero */
 
 #define MAX_ERROR_WARNING             256 /* size of disable warnings array */
 
